--- a/app/views/home/logged_in.html.erb
+++ b/app/views/home/logged_in.html.erb
@@ -1,3 +1,3 @@
-<h2><%= current_user.first_name %>'s Homepage!</h2>
+<h2>~ <%= current_user.first_name %>'s Homepage ~ </h2>
 
   <div id="display-area"></div>
