--- a/app/assets/javascripts/templates/myTradesTemplate.hbs
+++ b/app/assets/javascripts/templates/myTradesTemplate.hbs
@@ -3,34 +3,35 @@
   </br >
   <div class="list-group corners1" >
     <h4 class="list-group-item-heading">Trades Awaiting Your Response:</h4>
-    {{#if mustRespond.count}}
+    {{#unless mustRespond.length}}
     <p>You don't currently have any trades awaiting your response</p>
     
     {{else}}
 
       {{#each mustRespond}}
-      <p class="list-group-item-text"><a href="mailto:{{other_trader.email}}?subject=LibbyLibby Trade">requested {{book_they_want}} from you on {{created_date}}, and is still waiting for a response.</p><button class="btn btn-primary btn-xs" id="see-books-btn" data-user={{other_trader.id}}>See User's Books</button><button class="btn btn-primary btn-xs"
-      id="cancel-trade-btn" data-trade={{id}}>Cancel This Trade</button>
+
+      <p class="list-group-item-text"><a href="mailto:{{other_trader.email}}?subject=LibbyLibby Trade">{{other_trader.real_name}}</a> requested <b>{{book_they_want.title}}</b> from you on {{created_date}}, and is still waiting for a response.</p><br><button class="btn btn-primary btn-xs see-books-btn" data-user={{other_trader.id}}>See User's Books</button><br><br><button class="btn btn-primary btn-xs cancel-trade-btn" data-trade={{id}}>Cancel This Trade</button><hr>
       {{/each}}
 
-    {{/if}}
+    {{/unless}}
   </div>
 
-  <div class="list-group corners2" >
+  <div class="list-group corners1" >
     <h4 class="list-group-item-heading">Trades You Requested Which Aren't Complete:</h4>
-    {{#if initiated.count}}
+    {{#unless initiated.length}}
     <p>You don't currently have any initiated trades</p>
     {{else}}
       {{#each initiated}}
-      <p class="list-group-item-text">You requested {{book_I_want}} from <a href="mailto:{{other_trader.email}}?subject=LibbyLibby Trade"> on {{created_date}}, and you're still waiting for a response.</p><button class="btn btn-primary btn-xs" id="cancel-trade-btn" data-trade={{id}}>Cancel This Trade</button>
+      <p class="list-group-item-text">You requested <b>{{book_I_want.title}}</b> from <a href="mailto:{{other_trader.email}}?subject=LibbyLibby Trade">{{other_trader.real_name}}</a> on {{created_date}}, and you're still waiting for a response.</p><br><button class="btn btn-primary btn-xs cancel-trade-btn" data-trade={{id}}>Cancel This Trade</button><hr>
       {{/each}}
-    {{/if}}
+    {{/unless}}
   </div>
 
+  {{completed}}
     <div class="list-group corners1" >
     <h4 class="list-group-item-heading">Completed Trades:</h4>
-    {{#if initiated.count}}
-    <p>You don't currently have any initiated trades</p>
+    {{#unless completed.length}}
+    <p>You don't currently have any completed trades</p>
     {{else}}
       {{#each completed}}
         {{#if needs_first_trader_rating}}
@@ -52,6 +53,7 @@
           <input type="radio" value="2" name="user_review" id="user_review_2" /><br />
           <label for="user_rating_1">The book never arrived/was in awful condition</label>
           <input type="radio" value="1" name="user_review" id="user_review_1" /><br />
+          <button class="rate-trader1-btn btn btn-primary btn-xs data-trade={{id}}">Rate This Trader</button> 
         </div>
 
         {{else}}
@@ -74,9 +76,10 @@
             <input type="radio" value="2" name="user_review" id="user_review_2" /><br />
             <label for="user_rating_1">The book never arrived/was in awful condition</label>
             <input type="radio" value="1" name="user_review" id="user_review_1" /><br />
+            <button class="rate-trader2-btn btn btn-primary btn-xs">Rate This Trader</button> 
           </div>
         {{/if}}
       {{/each}}
-    {{/if}}
+    {{/unless}}
   </div>
 </div>
