--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,8 +23,8 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div><br>
 
-  <div class="actions" class: 'btn btn-primary'>
-    <%= f.submit "Sign up" %>
+  <div class="actions">
+    <%= f.submit "Sign up", class: 'btn btn-primary bt-xs' %>
   </div>
 <% end %>
 
