--- a/app/assets/javascripts/templates/myTradesTemplate.hbs
+++ b/app/assets/javascripts/templates/myTradesTemplate.hbs
@@ -1,5 +1,5 @@
 <div class="trades">
-  <h2>Your Trades (if any):</h2>
+  <h2>Your Trades:</h2>
   </br >
   <div class="list-group corners1" >
     <h4 class="list-group-item-heading">Trades Awaiting Your Response:</h4>
@@ -22,12 +22,12 @@
     <p>You don't currently have any initiated trades</p>
     {{else}}
       {{#each initiated}}
-      <p class="list-group-item-text">You requested <b>{{book_I_want.title}}</b> from <a href="mailto:{{other_trader.email}}?subject=LibbyLibby Trade">{{other_trader.real_name}}</a> on {{created_date}}, and you're still waiting for a response.</p><br><button class="btn btn-primary btn-xs cancel-trade-btn" data-trade={{id}}>Cancel This Trade</button><hr>
+      <h1>{{this.second_trader.real_name}}</h1>
+      <p class="list-group-item-text">You requested <b>{{this..title}}</b> from <a href="mailto:{{other_trader.email}}?subject=LibbyLibby Trade">{{other_trader.real_name}}</a> on {{created_date}}, and you're still waiting for a response.</p><br><button class="btn btn-primary btn-xs cancel-trade-btn" data-trade={{id}}>Cancel This Trade</button><hr>
       {{/each}}
     {{/unless}}
   </div>
 
-  {{completed}}
     <div class="list-group corners1" >
     <h4 class="list-group-item-heading">Completed Trades:</h4>
     {{#unless completed.length}}
@@ -35,40 +35,22 @@
     {{else}}
       {{#each completed}}
         {{#if needs_first_trader_rating}}
-          <p class="list-group-item-text">{{other_trader.email}}requested <strong>{{book_they_want}}</strong> from you, and you traded <strong>{{book_I_want}}</strong> for it on {{completed_date}}.</p><br />
+          <p class="list-group-item-text"><a href="mailto:{{other_trader.email}}?subject=LibbyLibby Trade">{{other_trader.real_name}}</a> requested <strong>{{book_they_want.title}}</strong> from you, and you traded <strong>{{book_I_want.title}}</strong> for it on {{completed_date}}.</p><br />
 
-          <h3>Be sure you mail the book to: </h3>
-          <p>{{other_trader.real_name}}</p>
-          <p>{{other_trader.street}}</p>
-          <p>{{other_trader.city}}</p>
-          <p>{{other_trader.state}}</p>
-          <p>{{other_trader.zipcode}}</p><br>
+          <h4>Be sure you mail the book to: </h4>
+          <div class="address">
+            <p class="small">
+              {{other_trader.real_name}}</br>
+              {{other_trader.street}}</br>
+              {{other_trader.city}}</br>
+              {{other_trader.state}}</br>
+              {{other_trader.zipcode}}</br>
+            </p>
+          </div>
 
-          <h3>You can rate the user below, based on the book condition, shipping time, etc., once you get your book:</h3>
-        <div class="radio_field">
-          <p><strong>Other User Rating</strong></p>
-          <label for="user_rating_3">The book arrived in a reasonable amount of time and as described</label>
-          <input type="radio" value="3" name="user_review" id="user_review_3" /><br />
-          <label for="user_rating_2">There were some problems which were eventually resolved</label>
-          <input type="radio" value="2" name="user_review" id="user_review_2" /><br />
-          <label for="user_rating_1">The book never arrived/was in awful condition</label>
-          <input type="radio" value="1" name="user_review" id="user_review_1" /><br />
-          <button class="rate-trader1-btn btn btn-primary btn-xs data-trade={{id}}">Rate This Trader</button> 
-        </div>
-
-        {{else}}
-          <p class="list-group-item-text">You requested <strong>{{book_I_want}} from {{other_trader.email}}, and you should have sent them {{book_they_want}} within three days of {{completed_date}}.</p><br />
-
-
-          <h3>Be sure you mail the book to: </h3>
-          <p>{{other_trader.real_name}}</p>
-          <p>{{other_trader.street}}</p>
-          <p>{{other_trader.city}}</p>
-          <p>{{other_trader.state}}</p>
-          <p>{{other_trader.zipcode}}</p><br>
-
-          <h3>You can rate the user below, based on the book condition, shipping time, etc., once you get your book:</h3>
-          <div class="radio_field">
+         {{#unless first_trader_rating}}    
+          <h4>You can rate the user below, based on the book condition, shipping time, etc., once you get your book:</h4>
+          <div class="radio_field rating">
             <p><strong>Other User Rating</strong></p>
             <label for="user_rating_3">The book arrived in a reasonable amount of time and as described</label>
             <input type="radio" value="3" name="user_review" id="user_review_3" /><br />
@@ -76,8 +58,39 @@
             <input type="radio" value="2" name="user_review" id="user_review_2" /><br />
             <label for="user_rating_1">The book never arrived/was in awful condition</label>
             <input type="radio" value="1" name="user_review" id="user_review_1" /><br />
-            <button class="rate-trader2-btn btn btn-primary btn-xs">Rate This Trader</button> 
+            <button class="rate-trader1-btn btn btn-primary btn-xs data-trade={{id}}">Rate This Trader</button> 
           </div>
+        {{/unless}}  
+
+        {{else}}
+          <p class="list-group-item-text">You requested <strong>{{book_I_want.title}}</strong> from <a href="mailto:{{other_trader.email}}?subject=LibbyLibby Trade">{{other_trader.real_name}}</a>, and you should have sent them <strong>{{book_they_want.title}}</strong> within three days of {{completed_date}}.</p><br />
+
+
+          
+          <h4>Be sure you mail the book to: </h4>
+          <div class="address">
+            <p class="small">
+              {{other_trader.real_name}}</br>
+              {{other_trader.street}}</br>
+              {{other_trader.city}}</br>
+              {{other_trader.state}}</br>
+              {{other_trader.zipcode}}</br>
+            </p>
+          </div>
+
+          {{#unless second_trader_rating}} 
+            <h4>You can rate the user below, based on the book condition, shipping time, etc., once you get your book:</h4>
+            <div class="radio_field rating">
+              <p><strong>Other User Rating</strong></p>
+              <label for="user_rating_3">The book arrived in a reasonable amount of time and as described</label>
+              <input type="radio" value="3" name="user_review" id="user_review_3" /><br />
+              <label for="user_rating_2">There were some problems which were eventually resolved</label>
+              <input type="radio" value="2" name="user_review" id="user_review_2" /><br />
+              <label for="user_rating_1">The book never arrived/was in awful condition</label>
+              <input type="radio" value="1" name="user_review" id="user_review_1" /><br />
+              <button class="rate-trader2-btn btn btn-primary btn-xs" data-trade={{id}} >Rate This Trader</button> 
+            </div>
+          {{/unless}}  
         {{/if}}
       {{/each}}
     {{/unless}}
