--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,13 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+
+ 
+
   <%= analytics_init if Rails.env.production? %>
 
         <div id="container">
-                <img id="banner-img" <%= image_tag "banner1.png" %>
+                <img id="banner-img" <%= image_tag "bannertest.png" %>
         </div>
 
 
