--- a/app/assets/javascripts/templates/myTradesTemplate.hbs
+++ b/app/assets/javascripts/templates/myTradesTemplate.hbs
@@ -1,29 +1,25 @@
 <div class="trades">
-  <h2>Your Trades:</h2>
+  <h3>Your Trades:</h3>
   </br >
   <div class="list-group corners1" >
     <h4 class="list-group-item-heading">Trades Awaiting Your Response:</h4>
     {{#unless mustRespond.length}}
-    <p>You don't currently have any trades awaiting your response</p>
-    
+    <p>You don't currently have any trades awaiting your response</p>    
     {{else}}
-
       {{#each mustRespond}}
-
       <p class="list-group-item-text"><a href="mailto:{{other_trader.email}}?subject=LibbyLibby Trade">{{other_trader.real_name}}</a> requested <b>{{book_they_want.title}}</b> from you on {{created_date}}, and is still waiting for a response.</p><br><button class="btn btn-primary btn-xs see-books-btn" data-user={{other_trader.id}}>See User's Books</button><br><br><button class="btn btn-primary btn-xs cancel-trade-btn" data-trade={{id}}>Cancel This Trade</button><hr>
       {{/each}}
-
     {{/unless}}
   </div>
 
-  <div class="list-group corners1" >
+<div class="list-group corners1" >
     <h4 class="list-group-item-heading">Trades You Requested Which Aren't Complete:</h4>
     {{#unless initiated.length}}
     <p>You don't currently have any initiated trades</p>
     {{else}}
       {{#each initiated}}
-      <h1>{{this.second_trader.real_name}}</h1>
-      <p class="list-group-item-text">You requested <b>{{this..title}}</b> from <a href="mailto:{{other_trader.email}}?subject=LibbyLibby Trade">{{other_trader.real_name}}</a> on {{created_date}}, and you're still waiting for a response.</p><br><button class="btn btn-primary btn-xs cancel-trade-btn" data-trade={{id}}>Cancel This Trade</button><hr>
+      <h1>Help!</h1>
+      <p class="list-group-item-text">You requested <b>{{this.title}}</b> from <a href="mailto:{{other_trader.email}}?subject=LibbyLibby Trade">{{other_trader.real_name}}</a> on {{created_date}}, and you're still waiting for a response.</p><br><button class="btn btn-primary btn-xs cancel-trade-btn" data-trade={{id}}>Cancel This Trade</button><hr>
       {{/each}}
     {{/unless}}
   </div>
@@ -33,6 +29,7 @@
     {{#unless completed.length}}
     <p>You don't currently have any completed trades</p>
     {{else}}
+
       {{#each completed}}
         {{#if needs_first_trader_rating}}
           <p class="list-group-item-text"><a href="mailto:{{other_trader.email}}?subject=LibbyLibby Trade">{{other_trader.real_name}}</a> requested <strong>{{book_they_want.title}}</strong> from you, and you traded <strong>{{book_I_want.title}}</strong> for it on {{completed_date}}.</p><br />
@@ -48,19 +45,23 @@
             </p>
           </div>
 
-         {{#unless first_trader_rating}}    
-          <h4>You can rate the user below, based on the book condition, shipping time, etc., once you get your book:</h4>
-          <div class="radio_field rating">
-            <p><strong>Other User Rating</strong></p>
-            <label for="user_rating_3">The book arrived in a reasonable amount of time and as described</label>
-            <input type="radio" value="3" name="user_review" id="user_review_3" /><br />
-            <label for="user_rating_2">There were some problems which were eventually resolved</label>
-            <input type="radio" value="2" name="user_review" id="user_review_2" /><br />
-            <label for="user_rating_1">The book never arrived/was in awful condition</label>
-            <input type="radio" value="1" name="user_review" id="user_review_1" /><br />
-            <button class="rate-trader1-btn btn btn-primary btn-xs data-trade={{id}}">Rate This Trader</button> 
+          <div class="rating">
+            {{#unless first_trader_rating}}    
+            <h4>You can rate the user below, based on the book condition, shipping time, etc., once you get your book:</h4>
+            <div class="radio_field rating">
+              <p><strong>Other User Rating</strong></p>
+              <label for="user_rating_3">The book arrived in a reasonable amount of time and as described</label>
+              <input type="radio" value="3" name="user_review" id="user_review_3" /><br />
+              <label for="user_rating_2">There were some problems which were eventually resolved</label>
+              <input type="radio" value="2" name="user_review" id="user_review_2" /><br />
+              <label for="user_rating_1">The book never arrived/was in awful condition</label>
+              <input type="radio" value="1" name="user_review" id="user_review_1" /><br />
+              <button class="rate-trader1-btn btn btn-primary btn-xs data-trade={{id}}">Rate This Trader</button> 
+            </div>
+            {{/unless}} 
           </div>
-        {{/unless}}  
+
+
 
         {{else}}
           <p class="list-group-item-text">You requested <strong>{{book_I_want.title}}</strong> from <a href="mailto:{{other_trader.email}}?subject=LibbyLibby Trade">{{other_trader.real_name}}</a>, and you should have sent them <strong>{{book_they_want.title}}</strong> within three days of {{completed_date}}.</p><br />
@@ -77,20 +78,23 @@
               {{other_trader.zipcode}}</br>
             </p>
           </div>
+          <div class="rating">
+            {{#unless second_trader_rating}} 
+              <h4>You can rate the user below, based on the book condition, shipping time, etc., once you get your book:</h4>
+              <div class="radio_field rating">
+                <p><strong>Other User Rating</strong></p>
+                <label for="user_rating_3">The book arrived in a reasonable amount of time and as described</label>
+                <input type="radio" value="3" name="user_review" id="user_review_3" /><br />
+                <label for="user_rating_2">There were some problems which were eventually resolved</label>
+                <input type="radio" value="2" name="user_review" id="user_review_2" /><br />
+                <label for="user_rating_1">The book never arrived/was in awful condition</label>
+                <input type="radio" value="1" name="user_review" id="user_review_1" /><br />
+                <button class="rate-trader2-btn btn btn-primary btn-xs" data-trade={{id}} >Rate This Trader</button> 
+              </div>
+            {{/unless}} 
+          </div>
 
-          {{#unless second_trader_rating}} 
-            <h4>You can rate the user below, based on the book condition, shipping time, etc., once you get your book:</h4>
-            <div class="radio_field rating">
-              <p><strong>Other User Rating</strong></p>
-              <label for="user_rating_3">The book arrived in a reasonable amount of time and as described</label>
-              <input type="radio" value="3" name="user_review" id="user_review_3" /><br />
-              <label for="user_rating_2">There were some problems which were eventually resolved</label>
-              <input type="radio" value="2" name="user_review" id="user_review_2" /><br />
-              <label for="user_rating_1">The book never arrived/was in awful condition</label>
-              <input type="radio" value="1" name="user_review" id="user_review_1" /><br />
-              <button class="rate-trader2-btn btn btn-primary btn-xs" data-trade={{id}} >Rate This Trader</button> 
-            </div>
-          {{/unless}}  
+
         {{/if}}
       {{/each}}
     {{/unless}}
