completed admin/mod functions in adMod plus templates

--- a/app/assets/javascripts/templates/allBooksTemplate.hbs
+++ b/app/assets/javascripts/templates/allBooksTemplate.hbs
@@ -1,16 +1,16 @@
-
 {{#each books}}
 <div class="boxframe">
-<img src="http://covers.openlibrary.org/b/isbn/{{isbn}}-M.jpg?default=false"  alt="" onerror="this.src='/assets/no-image-s.png'" style="width:43px;height:60px;">
-<h3>{{this.title}}</h3>
-<p>Author: {{this.author_first_name}} {{this.author_last_name}}</p></br>
-<button type='button' class='btn btn-primary btn-xs show-book-btn' value= "hey" data-user='{{this.user_id}}' data-book='{{this.id}}'>Click for More</button>
-</div>
-{{/each}}
-
-{{#unless mine}}
-  <div class='centered'><button type='button' class='btn btn-primary btn-xs load-more-books-btn'>Load More Books</button><div>
-{{/unless}}    
+  <img alt="" onerror="this.src='/assets/no-image-s.png'" src="http://covers.openlibrary.org/b/isbn/{{isbn}}-M.jpg?default=false" style="width:43px;height:60px;">
+  <h3>{{this.title}}</h3>
+  <p>Author: {{this.author_first_name}} {{this.author_last_name}}</p><br>
+  <button class='btn btn-primary btn-xs show-book-btn' data-book='{{this.id}}' data-user='{{this.user_id}}' type='button' value="hey">Click for More</button>
+</div>{{/each}} {{#unless mine}}
+<div class='centered'>
+  <button class='btn btn-primary btn-xs load-more-books-btn' type='button'>Load More Books</button>
+  <div>
+    {{/unless}}
+  </div>
+</div> 
 
 
 
