--- a/app/assets/javascripts/templates/myTradesTemplate.hbs
+++ b/app/assets/javascripts/templates/myTradesTemplate.hbs
@@ -1,5 +1,7 @@
 <div class="trades">
-  <h3>Your Trades:</h3>
+  <div id="trades-header">
+    <h3>Your Trades:</h3>
+  </div>  
   </br >
   <div class="list-group corners1" >
     <h4 class="list-group-item-heading">Trades Awaiting Your Response:</h4>
