--- a/app/assets/javascripts/templates/myProfileTemplate.hbs
+++ b/app/assets/javascripts/templates/myProfileTemplate.hbs
@@ -12,4 +12,9 @@
   <p><strong>Your email:</strong> {{data.user.email}}</p>
   <p><strong>Your Current Rating:</strong><span> {{data.rating}} out of 3 (3 is best)</p>
 </div>
+{{#if data.user.visible}}
+<button class='btn btn-warning center' id='invisible-btn' data-id={{data.user.id}} >Make yourself invisible</button>
+{{else}}
+<button class='btn btn-warning center' id='visible-btn' data-id={{data.user.id}} >Make yourself visible</button>
+{{/if}}
 
