--- a/app/assets/javascripts/templates/userProfileTemplate.hbs
+++ b/app/assets/javascripts/templates/userProfileTemplate.hbs
@@ -12,3 +12,8 @@
   <p><strong>email:</strong> {{data.user.email}}</p>
   <p><strong>Current Rating:</strong><span> {{data.rating}} out of 3 (3 is best)</p>
 </div>
+{{#if data.user.visible}}
+<button class='btn btn-warning center' id='invisible-btn' data-id={{data.user.id}} >Make this user invisible</button>
+{{else}}
+<button class='btn btn-warning center' id='visible-btn' data-id={{data.user.id}} >Make this user visible</button>
+{{/if}}
