cleaned up formatting

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
 
   <% elsif current_user && current_user.mod? %>
   <div class="corners2">
-    <h3>*** MODERATOR ***</h3>
+    <h3>** MODERATOR **</h3>
     <button id="view-users-btn" >View All Users</button>
   </div>  
 
