--- a/app/assets/javascripts/templates/editBookForm.hbs
+++ b/app/assets/javascripts/templates/editBookForm.hbs
@@ -1,59 +1,33 @@
-
 <h3>Edit a Book</h3>
-
-<p class="remember">All fields but 'title' and 'condition' are optional, but the more fields added, the better the chance of trading a book</p><br />
-
-  <div class="centerbox">
-    <div class="field">
-      <label for="book_title">Title</label><br />
-      <input type="text" id="book_title" value="{{book.title}}" placeholder="{{book.title}}" size="50" >
-    </div>  
-
-    <div class="field">
-      <label for="book_author_last_name">Author last name</label><br />
-      <input type="text" value="{{book.author_last_name}}" placeholder="{{book.author_last_name}}" id="book_author_last_name" />
-    </div>
-
-    <div class="field">
-      <label for="book_author_first_name">Author first name</label><br />
-      <input type="text" value="{{book.author_first_name}}" placeholder="{{book.author_first_name}}" id="book_author_first_name" />
-    </div>
-
-    <div class="field">
-      <label for="book_ISBN">Isbn</label><br />
-      <input type="text" value="{{book.isbn}}" placeholder="{{book.isbn}}" id="book_isbn" />
-    </div>
-
-    <div class="radio_field">
-      <p><strong>Condition</strong></p>
-      <label for="book_condition_like_new">Like New</label>
-      <input type="radio" value="Like New" name="book_condition" id="book_condition_like_new" /><br />
-      <label for="book_condition_good">Good</label>
-      <input type="radio" value="Good" name="book_condition" id="book_condition_good" /><br />
-      <label for="book_condition_fair">Fair</label>
-      <input type="radio" value="Fair" name="book_condition" id="book_condition_fair" /><br />
-    </div>
-
-    <div class="text_area">
-      <label for="book_description">Description</label><br />
-      <textarea name="book[description]" id="book_description" cols="50">{{book.description}}
-      </textarea>
-    </div>
-
-    <b>Genre(s): </b>
-    <div class="checkboxes">
-
-    
-    <div id="all-genres">
-    </div>
-
-
+<p class="remember">All fields but 'title' and 'condition' are optional, but the more fields added, the better the chance of trading a book</p><br>
+<div class="centerbox">
+  <div class="field">
+    <label for="book_title">Title</label><br>
+    <input id="book_title" placeholder="{{book.title}}" size="50" type="text" value="{{book.title}}">
   </div>
-  <br />
-
-  <button id="update-book-btn" data-user="{{book.user_id}}" data-book="{{book.id}}" class="btn btn-primary btn-xs">Update This Book</button> 
-  
-
-
-
-
+  <div class="field">
+    <label for="book_author_last_name">Author last name</label><br>
+    <input id="book_author_last_name" placeholder="{{book.author_last_name}}" type="text" value="{{book.author_last_name}}">
+  </div>
+  <div class="field">
+    <label for="book_author_first_name">Author first name</label><br>
+    <input id="book_author_first_name" placeholder="{{book.author_first_name}}" type="text" value="{{book.author_first_name}}">
+  </div>
+  <div class="field">
+    <label for="book_ISBN">Isbn</label><br>
+    <input id="book_isbn" placeholder="{{book.isbn}}" type="text" value="{{book.isbn}}">
+  </div>
+  <div class="radio_field">
+    <p><strong>Condition</strong></p><label for="book_condition_like_new">Like New</label> <input id="book_condition_like_new" name="book_condition" type="radio" value="Like New"><br>
+    <label for="book_condition_good">Good</label> <input id="book_condition_good" name="book_condition" type="radio" value="Good"><br>
+    <label for="book_condition_fair">Fair</label> <input id="book_condition_fair" name="book_condition" type="radio" value="Fair"><br>
+  </div>
+  <div class="text_area">
+    <label for="book_description">Description</label><br>
+    <textarea cols="50" id="book_description" name="book[description]">{{book.description}}</textarea>
+  </div><b>Genre(s):</b>
+  <div class="checkboxes">
+    <div id="all-genres"></div>
+  </div><br>
+  <button class="btn btn-primary btn-xs" data-book="{{book.id}}" data-user="{{book.user_id}}" id="update-book-btn">Update This Book</button>
+</div>
