--- a/app/views/trades/index.html.erb
+++ b/app/views/trades/index.html.erb
@@ -1,99 +1,44 @@
-<h2>Your Trades:</h2>
-</br >
-<% @my_trades.each do |tr| %>
-<% end %>
 
-
-<div class="list-group">
-  <h4 class="list-group-item-heading">Trades Awaiting Your Response:</h4>
-  <% @my_trades.each do |trade| %>
-    <% if trade.second_trader == @user && trade.status == "new" %>
-      <p class="list-group-item-text"><a href="mailto:<%= trade.first_trader.email %>?subject=LibbyLibby Trade"><%= trade.first_trader.email %></a> requested <%= trade.book_first_trader_wants.title %> from you on <%= trade.created_at.strftime("%b %d %Y") %>, and he/she is still waiting for your response/trade</p>
-      <p><%= link_to "See User's Books", user_books_path(trade.first_trader.id), class: "btn btn-primary" %></p>
-      <p><%= button_to "Delete/Refuse Trade", trade_path(trade), method: :delete, class: "btn btn-primary" %></p>
-    <% end %>
-  <% end %>
-</div>
-
-<div class="list-group">
-<h4 class="list-group-item-heading">Trades You Requested Which Aren't Complete:</h4>
-<% @my_trades.each do |trade| %>
-  <% if trade.first_trader == @user && trade.status == "new" %>
-      <p class="list-group-item-text">You requested <%= trade.book_first_trader_wants.title %> from <a href="mailto:<%= trade.second_trader.email %>?subject=LibbyLibby Trade"><%= trade.second_trader.email %></a> on <%= trade.created_at.strftime("%b %d %Y") %> and you're still waiting for a response </p>
-
-      <p><%= button_to "Delete/Cancel Trade", trade_path(trade), method: :delete %></p>
-   <% end %>
-<% end %>
-</div>
-
-<div class="list-group">
-<h4 class="list-group-item-heading">Completed Trades:</h4>
-
-<% @my_trades.each do |trade| %>
-  <% if trade.second_trader == @user && trade.status == "completed" %>
-    <p class="list-group-item-text"><%= trade.first_trader.email %> requested <strong><%= trade.book_first_trader_wants.title %></strong> from you, and you traded <strong><%= trade.book_second_trader_wants.title %></strong> for it on <%= trade.updated_at.strftime("%b %d %Y") %></p><br />
-
-      <% if trade.second_trader_rating.nil? %>
-        <% @trade = trade %>
-        <p class="list-group-item-text">When you (ideally) receive your book, feel free to rate the shipper:</p>
-
-       <%= form_for trade, url: trade_path(trade) do |f| %>
-
-          <b>Rating</b><br />
-          <%= f.radio_button :book_second_trader_wants_second_trader_rating, '3' %> The book arrived in a reasonable amount of time and as described<br />
-          <%= f.radio_button :book_second_trader_wants_second_trader_rating, '2' %> There were some problems which were eventually resolved<br />
-          <%= f.radio_button :book_second_trader_wants_second_trader_rating, '1' %> The book never arrived/was in awful condition<br />
-
-           <%= f.submit 'Rate this Reader' %><br />
-
-      <% end %>
-    <% end %>
-
-
-    <p class="list-group-item-text"><strong>Be sure to mail <%= trade.book_first_trader_wants.title %> to:</strong></p>
-
-      <%= trade.book_second_trader_wants.user.real_name %><br />
-      <%= trade.book_second_trader_wants.user.street %><br />
-      <%= trade.book_second_trader_wants.user.city %><br />
-      <%= trade.book_second_trader_wants.user.state %><br />
-      <%= trade.book_second_trader_wants.user.zipcode %><br />
-
-  <% end %>
-<% end %>  
-
-<% @my_trades.each do |trade| %>
-  <% if trade.first_trader == @user && trade.status == "completed" %>
-
-    <p class="list-group-item-text">You requested <%= trade.book_first_trader_wants.title %> from <% trade.second_trader %>, and he/she traded <%= trade.book_second_trader_wants.title %> for it on <%= trade.updated_at.strftime("%b %d %Y") %></p>
-    <% if trade.book_first_trader_wants_second_trader_rating.nil? %>
-
-      <p class="list-group-item-text">When you (ideally) receive your book, feel free to rate the shipper:</p>
-
-      <%= form_for trade do |f| %>
-
-          <b>Rating</b><br />
-          <%= f.radio_button :book_first_trader_wants_second_trader_rating, '3' %> The book arrived in a reasonable amount of time and as described<br />
-          <%= f.radio_button :book_first_trader_wants_second_trader_rating, '2' %> There were some problems which were eventually resolved<br />
-          <%= f.radio_button :book_first_trader_wants_second_trader_rating, '1' %> The book never arrived/was in awful condition<br />
-
-          <%= f.submit 'Rate this Reader' %><br />
-
-      <% end %>
-    <% end %>
-
-
-      <p class="list-group-item-text">Be sure to mail <%= trade.book_second_trader_wants.title %> to:</p>
-
-      <%= trade.book_first_trader_wants.user.real_name %><br />
-      <%= trade.book_first_trader_wants.user.street %><br />
-      <%= trade.book_first_trader_wants.user.city %><br />
-      <%= trade.book_first_trader_wants.user.state %><br />
-      <%= trade.book_first_trader_wants.user.zipcode %><br />
-
-
-  <% end %>
-<% end %> 
-</div>
-
-
-
+  <h2>Your Trades:</h2><br>
+  <%@my_trades.each do |tr| %> <%end %>
+  <div class="list-group">
+    <h4 class="list-group-item-heading">Trades Awaiting Your Response:</h4><%@my_trades.each do |trade| %><%if trade.second_trader == @user && trade.status == "new" %>
+    <p class="list-group-item-text"><a href="mailto:%3C%=%20trade.first_trader.email%20%%3E?subject=LibbyLibby%20Trade"><%= trade.first_trader.email %></a> requested <%= trade.book_first_trader_wants.title %> from you on <%= trade.created_at.strftime("%b %d %Y") %>, and he/she is still waiting for your response/trade</p>
+    <p><%= link_to "See User's Books", user_books_path(trade.first_trader.id), class: "btn btn-primary" %></p>
+    <p><%= button_to "Delete/Refuse Trade", trade_path(trade), method: :delete, class: "btn btn-primary" %></p><%end %><%end %>
+  </div>
+  <div class="list-group">
+    <h4 class="list-group-item-heading">Trades You Requested Which Aren't Complete:</h4><%@my_trades.each do |trade| %><%if trade.first_trader == @user && trade.status == "new" %>
+    <p class="list-group-item-text">You requested <%= trade.book_first_trader_wants.title %> from <a href="mailto:%3C%=%20trade.second_trader.email%20%%3E?subject=LibbyLibby%20Trade"><%= trade.second_trader.email %></a> on <%= trade.created_at.strftime("%b %d %Y") %> and you're still waiting for a response</p>
+    <p><%= button_to "Delete/Cancel Trade", trade_path(trade), method: :delete %></p><%end %><%end %>
+  </div>
+  <div class="list-group">
+    <h4 class="list-group-item-heading">Completed Trades:</h4><%@my_trades.each do |trade| %><%if trade.second_trader == @user && trade.status == "completed" %>
+    <p class="list-group-item-text"><%= trade.first_trader.email %> requested <strong><%= trade.book_first_trader_wants.title %></strong> from you, and you traded <strong><%= trade.book_second_trader_wants.title %></strong> for it on <%= trade.updated_at.strftime("%b %d %Y") %></p><br>
+    <%if trade.second_trader_rating.nil? %> <%@trade = trade %>
+    <p class="list-group-item-text">When you (ideally) receive your book, feel free to rate the shipper:</p><%= form_for trade, url: trade_path(trade) do |f| %><b>Rating</b><br>
+    <%= f.radio_button :econd_trader_rating, '3' %> The book arrived in a reasonable amount of time and as described<br>
+    <%= f.radio_button :second_trader_rating, '2' %> There were some problems which were eventually resolved<br>
+    <%= f.radio_button :second_trader_rating, '1' %> The book never arrived/was in awful condition<br>
+    <%= f.submit 'Rate this Reader' %><br>
+    <%end %> <%end %>
+    <p class="list-group-item-text"><strong>Be sure to mail <%= trade.book_first_trader_wants.title %> to:</strong></p><%= trade.book_second_trader_wants.user.real_name %><br>
+    <%= trade.book_second_trader_wants.user.street %><br>
+    <%= trade.book_second_trader_wants.user.city %><br>
+    <%= trade.book_second_trader_wants.user.state %><br>
+    <%= trade.book_second_trader_wants.user.zipcode %><br>
+    <%end %> <%end %> <%@my_trades.each do |trade| %> <%if trade.first_trader == @user && trade.status == "completed" %>
+    <p class="list-group-item-text">You requested <%= trade.book_first_trader_wants.title %> from <%trade.second_trader %>, and he/she traded <%= trade.book_second_trader_wants.title %> for it on <%= trade.updated_at.strftime("%b %d %Y") %></p><%if trade.book_first_trader_wants_second_trader_rating.nil? %>
+    <p class="list-group-item-text">When you (ideally) receive your book, feel free to rate the shipper:</p><%= form_for trade do |f| %><b>Rating</b><br>
+    <%= f.radio_button :second_trader_rating, '3' %> The book arrived in a reasonable amount of time and as described<br>
+    <%= f.radio_button :second_trader_rating, '2' %> There were some problems which were eventually resolved<br>
+    <%= f.radio_button :second_trader_rating, '1' %> The book never arrived/was in awful condition<br>
+    <%= f.submit 'Rate this Reader' %><br>
+    <%end %> <%end %>
+    <p class="list-group-item-text">Be sure to mail <%= trade.book_second_trader_wants.title %> to:</p><%= trade.book_first_trader_wants.user.real_name %><br>
+    <%= trade.book_first_trader_wants.user.street %><br>
+    <%= trade.book_first_trader_wants.user.city %><br>
+    <%= trade.book_first_trader_wants.user.state %><br>
+    <%= trade.book_first_trader_wants.user.zipcode %><br>
+    <%end %> <%end %>
+  </div>
