modified layout, landing pages

--- a/app/views/home/logged_out.html.erb
+++ b/app/views/home/logged_out.html.erb
@@ -2,8 +2,8 @@
   <div class="container">
     <h2>Welcome to libbylibby!</h2> 
     <p> Libbylibby is a site for listing and trading books.  Simply add some books, complete your shipping info, and browse the site to find books you like.</p>
-   <p>If you like a book, suggest a trade; others can then trade for a book from your list or reject the trade.</p>
-    <p>If you both agree to trade, ship the selected title to the other person in a timely fashion via USPS media mail --- usually $3 to 5 --- and they'll do the same for you (unless they're bad neighbors!).</p>
-    <p> And if things don't work out --- the book doesn't come, or it's in awful condition, for example --- you can rate the shipper!</p><br />
+   <p>If you like a book, suggest a trade; others can then trade for a book from your list or reject the trade. Anyone can initiate a trade the same way.</p>
+    <p>If you both agree to trade, ship the selected title to the other person in a timely fashion via USPS media mail --- usually $3 to $5 --- and they'll do the same for you (unless they're bad neighbors!).</p>
+    <p> And if things don't work out --- the book doesn't come, or it's in awful condition, for example --- you can always rate the shipper.</p><br />
     <h3>Happy reading, happy trading!</h3>
   </div> 
